[gd_scene load_steps=3 format=3 uid="uid://ya74xcpydp3k"]

[ext_resource type="Script" uid="uid://b3gnuwptksbeh" path="res://scenes/minigames/vigenere_modify.gd" id="1_ras7p"]
[ext_resource type="Texture2D" uid="uid://ntwdfdnyucqu" path="res://assets/0044-parchment-paper-texture-seamless-hr.jpg" id="2_gqy2y"]

[node name="ViginereDecrypt" type="Control"]
z_index = 10
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 7.0
offset_right = 7.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ras7p")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -7.0
offset_right = 273.0
offset_bottom = 280.0
texture = ExtResource("2_gqy2y")
expand_mode = 2
stretch_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 205.0
offset_bottom = 200.0
theme_override_constants/separation = 20

[node name="Vigenere" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Vigenere Cipher"

[node name="plaintext" type="Label" parent="VBoxContainer/Vigenere"]
layout_mode = 0
offset_left = 1.0
offset_top = 37.0
offset_right = 192.0
offset_bottom = 60.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Hello this is the message"

[node name="ciphertext" type="Label" parent="VBoxContainer/Vigenere"]
layout_mode = 0
offset_left = 1.0
offset_top = 61.0
offset_right = 192.0
offset_bottom = 84.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Hello this is the message"

[node name="SecretKey" type="Label" parent="VBoxContainer/Vigenere"]
layout_mode = 0
offset_top = 92.0
offset_right = 81.0
offset_bottom = 115.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Secret Key"

[node name="KeyText" type="LineEdit" parent="VBoxContainer/Vigenere"]
layout_mode = 0
offset_left = -2.0
offset_top = 120.0
offset_right = 203.0
offset_bottom = 151.0

[node name="Hint" type="MenuButton" parent="VBoxContainer/Vigenere"]
layout_mode = 0
offset_left = -2.0
offset_top = 160.0
offset_right = 85.0
offset_bottom = 191.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Show Key Hint"

[node name="submitButton" type="Button" parent="."]
layout_mode = 0
offset_top = 217.0
offset_right = 205.0
offset_bottom = 262.0
text = "Submit"

[connection signal="text_changed" from="VBoxContainer/Vigenere/KeyText" to="." method="_on_key_text_text_changed"]
[connection signal="text_submitted" from="VBoxContainer/Vigenere/KeyText" to="." method="_on_key_text_text_submitted"]
[connection signal="pressed" from="submitButton" to="." method="_on_submit_button_pressed"]
